--- a/about-us.html
+++ b/about-us.html
@@ -163,9 +163,6 @@
                         <div class="col-md-8">
                             <p>
                                 At MediaX, we are a dynamic team of advertising professionals passionate about staying ahead of the curve. Our expertise in crafting innovative strategies ensures impactful results for our clients. Collaborating with companies globally, we tailor bespoke plans designed to drive business growth and success.
-                                <!-- MediaX is a lively bunch of advertising pros, always up-to-date with the latest trends.
-                                We're skilled at creating effective strategies that get results. Working with companies
-                                worldwide, we develop unique plans to help businesses grow. -->
                             </p>
                         </div>
                     </div>
@@ -234,7 +231,6 @@
                                     </div>
                                 </div>
                             </div>
-
                             <div class="col-xl-2 col-md-3 col-sm-4 col-6 my-2 my-sm-4">
                                 <div class="te-box">
                                     <div class="te-img"><img src="image/team/Ritika.jpeg" alt="" class="w-100"></div>
@@ -296,6 +292,16 @@
                                     <div class="te-text">
                                         <div class="te-title">
                                             Rishabh</div>
+                                        <div class="te-pera">Performance Marketing Executive</div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-xl-2 col-md-3 col-sm-4 col-6 my-2 my-sm-4">
+                                <div class="te-box">
+                                    <div class="te-img"><img src="image/team/munkashif.PNG" alt="" class="w-100"></div>
+                                    <div class="te-text">
+                                        <div class="te-title">
+                                            Munkashif</div>
                                         <div class="te-pera">Brand Strategist and Account Executive</div>
                                     </div>
                                 </div>
