--- a/index.html
+++ b/index.html
@@ -381,19 +381,19 @@
                                 <div class="ouw-img"><img src="image/project/Art & Life/Image.jpeg" alt=""></div>
                                 <div class="ouw-text">
 
-                                    <div class="">
+                                    <!-- <div class="">
                                         <p>Arts & Life revives tradition through marble inlay, crafting each piece with
                                             meticulous detail and creative flair. </p>
                                     </div>
                                     <div class="ouw-logo">
                                         <img src="image/project/Art & Life/Logo.png" class="" alt="">
-                                    </div>
-                                    <!-- <div class="">
-                                        <a href="#" class="th-arrow-btn">
+                                    </div> -->
+                                    <div class="">
+                                        <a href="art-n-life-case-study.html" class="th-arrow-btn">
                                             <span class="btn-arrow"><img src="image/main-arrow.png" alt=""></span>
                                             <span class="btn-text">Read More</span>
                                         </a>
-                                    </div> -->
+                                    </div>
                                 </div>
                             </a>
                         </div>
@@ -406,20 +406,19 @@
                                 </div>
                                 <div class="ouw-img"><img src="image/project/M.R. W/Image.png" alt=""></div>
                                 <div class="ouw-text">
-
-                                    <div class="">
+                                    <!-- <div class="">
                                         <p>Delivering a gorgeous web experience for India’s top Architectural &
                                             Engineering Hub</p>
                                     </div>
                                     <div class="ouw-logo">
                                         <img src="image/project/M.R. W/logo.png" class="" alt="">
-                                    </div>
-                                    <!-- <div class="">
-                                        <a href="#" class="th-arrow-btn">
+                                    </div> -->
+                                    <div class="">
+                                        <a href="mrw-case-study.html" class="th-arrow-btn">
                                             <span class="btn-arrow"><img src="image/main-arrow.png" alt=""></span>
                                             <span class="btn-text">Read More</span>
                                         </a>
-                                    </div> -->
+                                    </div>
                                 </div>
                             </a>
                         </div>
@@ -432,20 +431,19 @@
                                 </div>
                                 <div class="ouw-img"><img src="image/project/SWM/image.png" alt=""></div>
                                 <div class="ouw-text">
-
-                                    <div class="">
+                                    <!-- <div class="">
                                         <p>Designing a heist-inspired brand identity for Delhi’s pioneering language
                                             institution</p>
                                     </div>
                                     <div class="ouw-logo">
                                         <img src="image/project/SWM/logo.png" class="" alt="">
-                                    </div>
-                                    <!-- <div class="">
-                                        <a href="#" class="th-arrow-btn">
+                                    </div> -->
+                                    <div class="">
+                                        <a href="swm-case-study.html" class="th-arrow-btn">
                                             <span class="btn-arrow"><img src="image/main-arrow.png" alt=""></span>
                                             <span class="btn-text">Read More</span>
                                         </a>
-                                    </div> -->
+                                    </div>
                                 </div>
                             </a>
                         </div>
@@ -458,20 +456,19 @@
                                 </div>
                                 <div class="ouw-img"><img src="image/project/GV/image.jpeg" alt=""></div>
                                 <div class="ouw-text">
-
-                                    <div class="">
+                                    <!-- <div class="">
                                         <p>How we boosted leads and localised reach for an A2 dairy brand in target
                                             cities</p>
                                     </div>
                                     <div class="ouw-logo">
                                         <img src="image/project/GV/Logo.png" class="" alt="">
-                                    </div>
-                                    <!-- <div class="">
-                                        <a href="#" class="th-arrow-btn">
+                                    </div> -->
+                                    <div class="">
+                                        <a href="gaupalam-vedic-case-study.html" class="th-arrow-btn">
                                             <span class="btn-arrow"><img src="image/main-arrow.png" alt=""></span>
                                             <span class="btn-text">Read More</span>
                                         </a>
-                                    </div> -->
+                                    </div>
                                 </div>
                             </a>
                         </div>
@@ -488,10 +485,10 @@
                 <div class="main-h">
                     <h2>We Also Do</h2>
                 </div>
-                <br>
-                <br>
+                <br class="">
+                <br class="d-none d-sm-block">
                 <div class="row">
-                    <div class="col-sm-6 col-lg-4 mt-sm-5 mt-lg-0">
+                    <div class="col-sm-6 col-lg-4 mt-sm-5 p-2 p-sm-auto mt-lg-0">
                         <div class="wead-box">
                             <div class="wead-img"><img src="image/wead-1.png" alt="" class="w-100"></div>
                             <div class="wead-text">
@@ -504,7 +501,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-sm-6 col-lg-4 mt-5 mt-lg-0">
+                    <div class="col-sm-6 col-lg-4 mt-sm-5 p-2 p-sm-auto mt-lg-0">
                         <div class="wead-box">
                             <div class="wead-img"><img src="image/wead-2.png" alt="" class="w-100"></div>
                             <div class="wead-text">
@@ -516,7 +513,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-sm-6 col-lg-4 mt-5 mt-lg-0">
+                    <div class="col-sm-6 col-lg-4 mt-sm-5 p-2 p-sm-auto mt-lg-0">
                         <div class="wead-box">
                             <div class="wead-img"><img src="image/wead-3.png" alt="" class="w-100"></div>
                             <div class="wead-text">
@@ -641,7 +638,7 @@
                             <h4>TRAVEL BUREAU</h4>
                         </div>
                         <div class="test-content">
-                            <div class="test-logo"><img src="image/test-logo-2.png" alt=""></div>
+                            <div class="test-logo"><img src="image/test/test-4.png" alt=""></div>
                             <div class="test-name d-flex justify-content-between align-items-center">
                                 <div class="test-q"><img src="image/q-left.png" alt=""></div>
                                 <div class="test-h">
@@ -735,6 +732,7 @@
 
     <!-- ========== main Js ========== -->
     <script src="js/main.js"></script>
+    <script src="js/script.js"></script>
 
 
     <script>
