--- a/mrw-case-study.html
+++ b/mrw-case-study.html
@@ -77,10 +77,11 @@
                     </div>
                     <div class="col-md-9">
                         <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi, minus? Maiores voluptate voluptates ipsam alias doloremque odit quam officiis dignissimos deleniti! 
+                            MediaX partnered with M. R. Warerkar, a leading architectural firm, to showcase their transformative industrial projects. MediaX captured the essence of M. R. Warerkar's designs while maintaining coherence across diverse brand identities.
+
                         </p>
                         <p>
-                            Eum quisquam voluptates incidunt id consequuntur, veritatis vero molestiae distinctio odit voluptatem velit est mollitia facilis ad. Quasi, hic!
+                            The collaborative effort enhanced M. R. Warerkar's brand visibility and industry reputation, solidifying their position as leaders in industrial architecture.
                         </p>
                     </div>
                 </div>
@@ -111,6 +112,35 @@
             </div>
             <div class="casw-video my-4">
                 <video src="image/case-study/mrw/2.mp4" autoplay loop muted class="w-100"></video>
+            </div>
+        </section>
+        <!-- Case Study Website Building Section End -->
+        <!-- Case Study Website Building Section Start -->
+        <section class="case-study-website">
+            <div class="container-xxl">
+                <div class="casw-text">
+                    <div class="row align-items-center">
+                        <div class="col-6 p-0">
+                            <div class="casw-text-left">
+                                <h4 class="m-0">Website Building</h4>
+                            </div>
+                        </div>
+                        <div class="col-6 p-0 d-flex justify-content-end">
+                            <div class="casw-text-right">
+                                <a href="https://www.linkedin.com/company/m.r.-warerkar-&-associates-pvt.-ltd./" target="_blank" class="th-arrow-btn">
+                                    <span class="btn-text">View Linkedin</span>
+                                    <span class="btn-arrow"><img src="image/main-arrow.png" alt=""></span>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="casw-video my-4">
+             <div class="row align-items-center p-0">
+                <div class="col-md-7 casw-v-1"><img src="image/case-study/mrw/1.png" alt="" class="w-100"></div>
+                <div class="col-md-5 casw-v-2"><img src="image/case-study/mrw/2.png" alt="" class="w-100"></div>
+             </div>
             </div>
         </section>
         <!-- Case Study Website Building Section End -->
