--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
 
     <!-- Main Section Start -->
-    <main>
+    <main id="">
 
         <!-- Hero Section Start -->
         <section class="hero">
@@ -176,8 +176,8 @@
                         <h6>01.</h6>
                     </div>
                     <div class="ous-right">
-                        <h2>Outreach & Marketing Solutions</h2>
-                        <div class="ous-cont">
+                        <h2>Outreach & Marketing Solutions</h2> 
+                        <!-- <div class="ous-cont">
                             <div class="row justify-content-between">
                                 <div class="col-lg-5 mt-md-3 p-0">
                                     <img src="image/our-sol-1.png" alt="" class="w-100">
@@ -199,7 +199,13 @@
                                     </div>
                                 </div>
                             </div>
-                        </div>
+                        </div> -->
+                    </div>
+                    <div class="ous-right-btn">
+                        <a href="outreach-marketing-solution.html" class="th-arrow-btn">
+                            <span class="btn-arrow"><img src="image/main-arrow.png" alt=""></span>
+                            <span class="btn-text">Learn More</span>
+                        </a>
                     </div>
                 </div>
                 <div class="ous-box">
@@ -208,7 +214,7 @@
                     </div>
                     <div class="ous-right">
                         <h2>Film & Photography</h2>
-                        <div class="ous-cont">
+                        <!-- <div class="ous-cont">
                             <div class="row justify-content-between">
                                 <div class="col-lg-5 mt-md-3 p-0">
                                     <img src="image/our-sol-2.png" alt="" class="w-100">
@@ -230,7 +236,13 @@
                                     </div>
                                 </div>
                             </div>
-                        </div>
+                        </div> -->
+                    </div>
+                    <div class="ous-right-btn">
+                        <a href="film-n-photography.html" class="th-arrow-btn">
+                            <span class="btn-arrow"><img src="image/main-arrow.png" alt=""></span>
+                            <span class="btn-text">Learn More</span>
+                        </a>
                     </div>
                 </div>
                 <div class="ous-box">
@@ -239,7 +251,7 @@
                     </div>
                     <div class="ous-right">
                         <h2>Media Solutions</h2>
-                        <div class="ous-cont">
+                        <!-- <div class="ous-cont">
                             <div class="row justify-content-between">
                                 <div class="col-lg-5 mt-md-3 p-0">
                                     <img src="image/our-sol-3.png" alt="" class="w-100">
@@ -261,7 +273,13 @@
                                     </div>
                                 </div>
                             </div>
-                        </div>
+                        </div> -->
+                    </div>
+                    <div class="ous-right-btn">
+                        <a href="media-solutions.html" class="th-arrow-btn">
+                            <span class="btn-arrow"><img src="image/main-arrow.png" alt=""></span>
+                            <span class="btn-text">Learn More</span>
+                        </a>
                     </div>
                 </div>
                 <div class="ous-box">
@@ -270,7 +288,7 @@
                     </div>
                     <div class="ous-right">
                         <h2>Creative & Branding</h2>
-                        <div class="ous-cont">
+                        <!-- <div class="ous-cont">
                             <div class="row justify-content-between">
                                 <div class="col-lg-5 mt-md-3 p-0">
                                     <img src="image/our-sol-4.png" alt="" class="w-100">
@@ -293,7 +311,13 @@
                                     </div>
                                 </div>
                             </div>
-                        </div>
+                        </div> -->
+                    </div>
+                    <div class="ous-right-btn">
+                        <a href="creative-n-branding.html" class="th-arrow-btn">
+                            <span class="btn-arrow"><img src="image/main-arrow.png" alt=""></span>
+                            <span class="btn-text">Learn More</span>
+                        </a>
                     </div>
                 </div>
                 <div class="ous-box">
@@ -302,7 +326,7 @@
                     </div>
                     <div class="ous-right">
                         <h2>Web & AR</h2>
-                        <div class="ous-cont">
+                        <!-- <div class="ous-cont">
                             <div class="row justify-content-between">
                                 <div class="col-lg-5 mt-md-3 p-0">
                                     <img src="image/our-sol-5.png" alt="" class="w-100">
@@ -325,7 +349,13 @@
                                     </div>
                                 </div>
                             </div>
-                        </div>
+                        </div> -->
+                    </div>
+                    <div class="ous-right-btn">
+                        <a href="website-n-ar.html" class="th-arrow-btn">
+                            <span class="btn-arrow"><img src="image/main-arrow.png" alt=""></span>
+                            <span class="btn-text">Learn More</span>
+                        </a>
                     </div>
                 </div>
                 <div class="ous-box">
@@ -334,7 +364,7 @@
                     </div>
                     <div class="ous-right">
                         <h2>Outside of Home</h2>
-                        <div class="ous-cont">
+                        <!-- <div class="ous-cont">
                             <div class="row justify-content-between">
                                 <div class="col-lg-5 mt-md-3 p-0">
                                     <img src="image/our-sol-6.png" alt="" class="w-100">
@@ -356,7 +386,13 @@
                                     </div>
                                 </div>
                             </div>
-                        </div>
+                        </div> -->
+                    </div>
+                    <div class="ous-right-btn">
+                        <a href="outside-of-home.html" class="th-arrow-btn">
+                            <span class="btn-arrow"><img src="image/main-arrow.png" alt=""></span>
+                            <span class="btn-text">Learn More</span>
+                        </a>
                     </div>
                 </div>
             </div>
@@ -381,13 +417,14 @@
                                 <div class="ouw-img"><img src="image/project/Art & Life/Image.jpeg" alt=""></div>
                                 <div class="ouw-text">
 
-                                    <!-- <div class="">
-                                        <p>Arts & Life revives tradition through marble inlay, crafting each piece with
-                                            meticulous detail and creative flair. </p>
-                                    </div>
+                                    <!-- 
                                     <div class="ouw-logo">
                                         <img src="image/project/Art & Life/Logo.png" class="" alt="">
                                     </div> -->
+                                    <div class="d-block d-md-none">
+                                        <p>Arts & Life revives tradition through marble inlay, crafting each piece with
+                                            meticulous detail and creative flair. </p>
+                                    </div>
                                     <div class="">
                                         <a href="art-n-life-case-study.html" class="th-arrow-btn">
                                             <span class="btn-arrow"><img src="image/main-arrow.png" alt=""></span>
@@ -406,13 +443,14 @@
                                 </div>
                                 <div class="ouw-img"><img src="image/project/M.R. W/Image.png" alt=""></div>
                                 <div class="ouw-text">
-                                    <!-- <div class="">
-                                        <p>Delivering a gorgeous web experience for India’s top Architectural &
-                                            Engineering Hub</p>
-                                    </div>
+                                    <!-- 
                                     <div class="ouw-logo">
                                         <img src="image/project/M.R. W/logo.png" class="" alt="">
                                     </div> -->
+                                    <div class="d-block d-md-none">
+                                        <p>Delivering a gorgeous web experience for India’s top Architectural &
+                                            Engineering Hub</p>
+                                    </div>
                                     <div class="">
                                         <a href="mrw-case-study.html" class="th-arrow-btn">
                                             <span class="btn-arrow"><img src="image/main-arrow.png" alt=""></span>
@@ -431,13 +469,14 @@
                                 </div>
                                 <div class="ouw-img"><img src="image/project/SWM/image.png" alt=""></div>
                                 <div class="ouw-text">
-                                    <!-- <div class="">
-                                        <p>Designing a heist-inspired brand identity for Delhi’s pioneering language
-                                            institution</p>
-                                    </div>
+                                    <!-- 
                                     <div class="ouw-logo">
                                         <img src="image/project/SWM/logo.png" class="" alt="">
                                     </div> -->
+                                    <div class="d-block d-md-none">
+                                        <p>Designing a heist-inspired brand identity for Delhi’s pioneering language
+                                            institution</p>
+                                    </div>
                                     <div class="">
                                         <a href="swm-case-study.html" class="th-arrow-btn">
                                             <span class="btn-arrow"><img src="image/main-arrow.png" alt=""></span>
@@ -456,13 +495,14 @@
                                 </div>
                                 <div class="ouw-img"><img src="image/project/GV/image.jpeg" alt=""></div>
                                 <div class="ouw-text">
-                                    <!-- <div class="">
-                                        <p>How we boosted leads and localised reach for an A2 dairy brand in target
-                                            cities</p>
-                                    </div>
+                                    <!-- 
                                     <div class="ouw-logo">
                                         <img src="image/project/GV/Logo.png" class="" alt="">
                                     </div> -->
+                                    <div class="d-block d-md-block">
+                                        <p>How we boosted leads and localised reach for an A2 dairy brand in target
+                                            cities</p>
+                                    </div>
                                     <div class="">
                                         <a href="gaupalam-vedic-case-study.html" class="th-arrow-btn">
                                             <span class="btn-arrow"><img src="image/main-arrow.png" alt=""></span>
@@ -729,11 +769,24 @@
 
     <!-- Slick Js  -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js"></script>
+    <!-- 
+    Gsap Js 
+    <script src="https://assets.codepen.io/16327/ScrollSmoother.min.js"></script>
+    <script src="https://assets.codepen.io/16327/ScrollToPlugin.min.js"></script>
+    <script src="https://assets.codepen.io/16327/ScrollTrigger.min.js"></script> -->
 
     <!-- ========== main Js ========== -->
     <script src="js/main.js"></script>
     <script src="js/script.js"></script>
-
+    <!-- <script>
+        gsap.registerPlugin(ScrollTrigger, ScrollSmoother);
+        // create the scrollSmoother before your scrollTriggers
+        ScrollSmoother.create({
+            smooth: 2, // how long (in seconds) it takes to "catch up" to the native scroll position
+            effects: true, // looks for data-speed and data-lag attributes on elements
+            smoothTouch: 0.1, // much shorter smoothing time on touch devices (default is NO smoothing on touch devices)
+        });
+    </script> -->
 
     <script>
         // Counter code
