--- a/index.html
+++ b/index.html
@@ -70,8 +70,10 @@
                 <div class="row">
                     <div class="col-md-7 hb-box">
                         <div class="hb-left">
-                            <!-- <img src="image/hb-img.png" alt="" class="w-100"> -->
-                            <video src="image/hb-img.mp4" autoplay loop muted class="w-100"></video>
+                            <video src="image/hb-img.mp4" autoplay loop muted class="w-100" playsinline controls>
+                                <source src="image/hb-img.mp4" type="video/mp4">
+                                Your browser does not support the video tag.
+                              </video>                              
                         </div>
                     </div>
                     <div class="col-md-5 hb-box">
