--- a/about-us.html
+++ b/about-us.html
@@ -145,7 +145,12 @@
             </div>
             <div class="abh-img">
                 <!-- <img src="image/about-hero.jpg" alt="" class="w-100"> -->
-                 <video src="image/Showreel.mp4" autoplay muted class="w-100"></video>
+                 <!-- <video src="image/Showreel.mp4" autoplay muted class="w-100"></video> -->
+                 <video src="image/Showreel.mp4" autoplay loop muted class="w-100" playsinline controls>
+                    <source src="image/Showreel.mp4" type="video/mp4">
+                    Your browser does not support the video tag.
+                  </video>
+                  
             </div>
         </section>
         <!-- About Hero Section End -->
