home page video

--- a/about-us.html
+++ b/about-us.html
@@ -146,7 +146,7 @@
             <div class="abh-img">
                 <!-- <img src="image/about-hero.jpg" alt="" class="w-100"> -->
                  <!-- <video src="image/Showreel.mp4" autoplay muted class="w-100"></video> -->
-                 <video src="image/Showreel.mp4" autoplay loop muted class="w-100" playsinline controls>
+                 <video src="image/Showreel.mp4" autoplay loop muted class="w-100" playsinline>
                     <source src="image/Showreel.mp4" type="video/mp4">
                     Your browser does not support the video tag.
                   </video>
