--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                 <div class="row">
                     <div class="col-md-7 hb-box">
                         <div class="hb-left">
-                            <video src="image/hb-img.mp4" autoplay loop muted class="w-100" playsinline controls>
+                            <video src="image/hb-img.mp4" autoplay loop muted class="w-100" playsinline>
                                 <source src="image/hb-img.mp4" type="video/mp4">
                                 Your browser does not support the video tag.
                               </video>                              
