--- a/index.html
+++ b/index.html
@@ -408,7 +408,7 @@
                     <h2>OUR Work</h2>
                 </div>
                 <div class="row">
-                    <div class="col-md-6">
+                    <div class="col-md-6 p-ms-0 mb-4">
                         <div class="ouw-box">
                             <a href="art-n-life-case-study.html" class="">
                                 <div class="ouw-h">
@@ -423,7 +423,7 @@
                                     <div class="ouw-logo">
                                         <img src="image/project/Art & Life/Logo.png" class="" alt="">
                                     </div> -->
-                                    <div class="d-block d-md-none">
+                                    <div class="">
                                         <p>Arts & Life revives tradition through marble inlay, crafting each piece with
                                             meticulous detail and creative flair. </p>
                                     </div>
@@ -437,7 +437,7 @@
                             </a>
                         </div>
                     </div>
-                    <div class="col-md-6">
+                    <div class="col-md-6 p-ms-0 mb-4">
                         <div class="ouw-box">
                             <a href="" class="">
                                 <div class="ouw-h">
@@ -449,7 +449,7 @@
                                     <div class="ouw-logo">
                                         <img src="image/project/M.R. W/logo.png" class="" alt="">
                                     </div> -->
-                                    <div class="d-block d-md-none">
+                                    <div class="">
                                         <p>Delivering a gorgeous web experience for India’s top Architectural &
                                             Engineering Hub</p>
                                     </div>
@@ -463,7 +463,7 @@
                             </a>
                         </div>
                     </div>
-                    <div class="col-md-6">
+                    <div class="col-md-6 p-ms-0 mb-4">
                         <div class="ouw-box">
                             <a href="" class="">
                                 <div class="ouw-h">
@@ -475,7 +475,7 @@
                                     <div class="ouw-logo">
                                         <img src="image/project/SWM/logo.png" class="" alt="">
                                     </div> -->
-                                    <div class="d-block d-md-none">
+                                    <div class="">
                                         <p>Designing a heist-inspired brand identity for Delhi’s pioneering language
                                             institution</p>
                                     </div>
@@ -489,7 +489,7 @@
                             </a>
                         </div>
                     </div>
-                    <div class="col-md-6">
+                    <div class="col-md-6 p-ms-0 mb-4">
                         <div class="ouw-box">
                             <a href="" class="">
                                 <div class="ouw-h">
@@ -501,7 +501,7 @@
                                     <div class="ouw-logo">
                                         <img src="image/project/GV/Logo.png" class="" alt="">
                                     </div> -->
-                                    <div class="d-block d-md-block">
+                                    <div class="">
                                         <p>How we boosted leads and localised reach for an A2 dairy brand in target
                                             cities</p>
                                     </div>
