--- a/connect.html
+++ b/connect.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="contact[viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Contact Us | MediaX - Creative Growth Agency</title>
     <!-- Website Icon  -->
     <link rel="Icon" href="image/">
@@ -216,12 +216,12 @@
                                 <div class="cons-b-box cons-b-list">
                                     <div class="cons-b">
                                         <label for="retained-support" class="h-100">
-                                            <div class="d-flex justify-content-between h-100">
-                                                <div class="mb-5">
+                                            <div class="d-md-flex justify-content-between h-100">
+                                                <div class="mb-md-5">
                                                     <h3>Retained support</h3>
                                                 </div>
-                                                <div class="mt-5 align-self-end">
-                                                    <ul class="m-0 p-0">
+                                                <div class="mt-md-5 align-self-end">
+                                                    <ul class="m-md-0 p-md-0">
                                                         <li>
                                                             <p class="mb-0">Marketing & outreach</p>
                                                         </li>
@@ -238,12 +238,12 @@
                                     </div>
                                     <div class="cons-b">
                                         <label for="one-time-project">
-                                            <div class="d-flex justify-content-between h-100">
-                                                <div class="mb-5">
+                                            <div class="d-md-flex justify-content-between h-100">
+                                                <div class="mb-md-5">
                                                     <h3>One time project</h3>
                                                 </div>
-                                                <div class="mt-5">
-                                                    <ul class="m-0 p-0">
+                                                <div class="mt-md-5">
+                                                    <ul class="m-md-0 p-md-0">
                                                         <li>
                                                             <p class="mb-0">Marketing & outreach</p>
                                                         </li>
