--- a/connect.html
+++ b/connect.html
@@ -1875,7 +1875,7 @@
                                         </div>
                                         <div class="col-sm-10">
                                             <div class="mb-5">
-                                                <input name="website" type="url" placeholder="Website">
+                                                <input name="website" type="text" placeholder="Website">
                                             </div>
                                         </div>
                                         <div class="col-sm-10">
@@ -1891,7 +1891,6 @@
                                         </div>
                                     </div>
                                 </div>
-
                             </div>
                         </div>
                     </div>
